[gd_scene load_steps=2 format=3 uid="uid://b5k2n8iam3qwp"]

[ext_resource type="Script" path="res://scripts/minimap.gd" id="1_minimap"]

[node name="Minimap" type="Control"]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -220.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 160.0
script = ExtResource("1_minimap")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 0.9)

[node name="Border" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.7, 0.7, 0.9, 1)
mouse_filter = 2

[node name="MapArea" type="ColorRect" parent="Border"]
anchor_left = 0.06
anchor_top = 0.18
anchor_right = 0.94
anchor_bottom = 0.94
color = Color(0.2, 0.2, 0.25, 1)
mouse_filter = 2

[node name="TerrainDisplay" type="TextureRect" parent="Border/MapArea"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1
mouse_filter = 2

[node name="Title" type="Label" parent="Border"]
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.15
text = "MINIMAP"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 11

[node name="PlayerDot" type="ColorRect" parent="Border/MapArea"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
color = Color(1, 1, 0.2, 1)
mouse_filter = 2
z_as_relative = false
z_index = 10